fixed the gap issues and no selection error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,8 +150,8 @@ textarea {
     display: flex;
     flex-direction: column; 
     align-items: flex-end; 
-    gap: 20px; 
-    margin-top: 50px;
+    gap: 10px; 
+    margin-bottom: 25px;
     width: 100%;
 }
 
